--- a/docs/assets/css/customstyle.css
+++ b/docs/assets/css/customstyle.css
@@ -18,9 +18,13 @@
     }
 }
 
-.coverpage-fade-in {
+.coverpage-title {
     -webkit-animation: fade-in 1.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     animation: fade-in 1.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     font-size: 400%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.subtitle {
+    font-size: 135%;
 }
