--- a/docs/assets/css/customstyle.css
+++ b/docs/assets/css/customstyle.css
@@ -18,6 +18,24 @@
     }
 }
 
+::-webkit-scrollbar {
+    background-color: rgba(0, 0, 0, 0);
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #babac059;
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-button {
+    display: none;
+}
+
 .coverpage-title {
     -webkit-animation: fade-in 1.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     animation: fade-in 1.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
